// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContextMenu> should render correctly in Classic 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1000;
  border-radius: 0px;
  margin: 1px;
  border: 1px solid #D1DBE8;
  background-color: #FFF;
  box-shadow: 0px 1px 5px rgba(28,32,37,0.1);
}

<div
  className="c0"
/>
`;

exports[`<ContextMenu> should render correctly in Novo 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1000;
  width: 160px;
  padding: 8px 0;
  border-radius: 6px;
  margin: 1px;
  border: 1px solid #E0E0E0;
  background-color: #FFFFFF;
  box-shadow: 0px 1px 2px rgba(41,41,41,0.25);
}

<div
  className="c0"
/>
`;
